# tamagochi-matrix

./: .gitignore  LICENSE  MANIFEST.in  Mascota_virtual_desafio.py  README.md  mascota.py  mascota_virtual.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generar_arte.py
src/tamagochi_matrix/: animaciones_consola.py  audio_manager.py  consola.py  convertidor_arte.py  disenios_mascota.py  logica_mascota.py  main.py  renderizador_consola.py
src/tamagochi_matrix/disenios/: base.py  diseniomerovingio.py  diseniomorpheus.py  disenioneo.py  disenioniobe.py  diseniotrinity.py
src/tests/: test_logica.py
