[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamagochi-matrix"
version = "1.0.0"
authors = [
  { name="Tu Nombre", email="tu@email.com" },
]
description = "Un juego de mascota virtual en la consola con estética de la Matrix."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "Pillow",
    "pyfiglet",
    "colorama; sys_platform == 'win32'",
]

[project.scripts]
matrix-pet = "tamagochi_matrix.main:main"