[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamagochi-matrix"
version = "1.0.1"
authors = [
  { name="Franco Barreto", email="franco.barreto@gmail.com" },
]
description = "Un juego de mascota virtual en la consola con estética de la Matrix."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "Pillow",
    "pyfiglet",
    "playsound==1.2.2"
]

[project.scripts]
matrix-pet = "tamagochi_matrix.main:main"

[tool.setuptools]
include-package-data = true